--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "amarpatil_resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://amarpatil07.github.io/my_resume",
   "dependencies": {
     "@babel/core": "^7.25.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -22,6 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
